config/04-kubernetes/40-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    dns.gardener.cloud/dnsnames: 'api.hub.tekton.dev'
    dns.gardener.cloud/ttl: "3600"
  name: tekton-hub-api
spec:
  rules:
  - host: api.hub.tekton.dev
    http:
      paths:
      - backend:
          service:
            name: tekton-hub-api
            port: 
              number: 8000
        pathType: Prefix
        path: /*
  tls:
  - hosts:
    - api.hub.tekton.dev
    secretName: api-hub-tekton-dev-tls
