config/04-kubernetes/40-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    dns.gardener.cloud/dnsnames: 'auth.hub.tekton.dev'
    dns.gardener.cloud/ttl: "3600"
  name: tekton-hub-auth
spec:
  rules:
  - host: auth.hub.tekton.dev
    http:
      paths:
      - backend:
          service:
            name: tekton-hub-api
            port: 
              number: 4200
        pathType: Prefix
        path: /*
  tls:
  - hosts:
    - auth.hub.tekton.dev
    secretName: auth-hub-tekton-dev-tls
